--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html><html lang="bn">
+<!DOCTYPE html>
+<html lang="bn">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crunchyroll Premium BD Shop</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom, #131c2b, #202f45);
-      color: white;
       margin: 0;
       padding: 0;
+      background: linear-gradient(to bottom, #131c2b, #202f45);
+      color: white;
     }
     header {
       background-color: #0a0f1c;
@@ -22,114 +20,85 @@
       box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     }
     header h1 {
-      margin: 0;
       color: #ff9f1c;
+      margin: 0;
+      font-size: 26px;
+    }
+    .banner img {
+      width: 100%;
+      max-height: 400px;
+      object-fit: cover;
+      display: block;
     }
     .container {
-      max-width: 700px;
+      max-width: 900px;
       margin: 30px auto;
-      background: #1c2a3a;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+      background-color: #1c2a3a;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
       text-align: center;
     }
-    .main-image, .second-image {
-      width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    .circle-image {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin: 0 auto 20px;
+      border: 3px solid #ff9f1c;
     }
-    .section-title {
-      margin-top: 20px;
-      font-size: 26px;
+    .circle-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .mega-title {
+      font-size: 28px;
       color: #ffcc00;
+      margin-bottom: 10px;
+      font-weight: bold;
     }
     .stars {
-      font-size: 24px;
-      margin-top: 10px;
+      font-size: 30px;
       color: gold;
     }
-    .stars span {
-      margin: 0 2px;
-    }
-    form input, form select, form button {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-    }
-    button {
-      background-color: #ff4081;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #e23370;
+    @media(max-width: 600px) {
+      .mega-title {
+        font-size: 22px;
+      }
+      .stars {
+        font-size: 24px;
+      }
+      .circle-image {
+        width: 100px;
+        height: 100px;
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Crunchyroll Premium BD Shop</h1>
-  </header>  <div class="container">
-    <img src="https://i.ibb.co/rG6z1sdw/1.jpg" alt="Main Banner" class="main-image"><img src="https://i.ibb.co/kVgtpbjT/2.jpg" alt="Mega Package" class="second-image">
+  </header>
 
-<div class="section-title">💥 MEGA PACKAGES 💥</div>
-<div class="stars">
-  <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-</div>
+  <!-- Full Banner Image -->
+  <div class="banner">
+    <img src="https://i.ibb.co/rG6z1sd/1s-photo.jpg" alt="Anime Banner">
+  </div>
 
-<h2 style="margin-top: 30px;">📦 অর্ডার করুন</h2>
-<form id="orderForm">
-  <input type="text" name="name" placeholder="👤 Full Name" required>
-  <input type="email" name="email" placeholder="📧 Email" required>
-  <input type="text" name="address" placeholder="🏠 Address" required>
-  <input type="text" name="mobile" placeholder="📱 Mobile Number" required>
-  <select name="package" required>
-    <option value="">📦 একটি প্যাকেজ বেছে নিন</option>
-    <option value="1 Month – 100 TK">1 Month – 100 TK</option>
-    <option value="3 Months – 300 TK">3 Months – 300 TK</option>
-    <option value="6 Months – 600 TK">6 Months – 600 TK</option>
-  </select>
-  <input type="text" name="payment_number" placeholder="💳 Payment Number" required>
-  <input type="text" name="trans_id" placeholder="🧾 Transaction ID" required>
-  <select name="payment_method" required>
-    <option value="">💰 Payment Method</option>
-    <option value="Bkash">Bkash</option>
-    <option value="Nagad">Nagad</option>
-  </select>
-  <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-</form>
+  <div class="container">
+    <!-- Small Round Image -->
+    <div class="circle-image">
+      <img src="https://i.ibb.co/kVgtpbj/2s-photo.jpg" alt="Profile">
+    </div>
 
-  </div>  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-      authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-      projectId: "crunchyrollpremiumbd-shop",
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    emailjs.init("SsUmUorUm-BZG8LBY");
+    <!-- Mega Package Title -->
+    <div class="mega-title">🎁 MEGA PACKAGES</div>
 
-    const service = "service_z1714kq";
-    const adminTemplate = "template_hp66tqp";
-    const customerTemplate = "template_1z1lhlf";
+    <!-- 5 Stars -->
+    <div class="stars">⭐️⭐️⭐️⭐️⭐️</div>
+  </div>
 
-    document.getElementById("orderForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const data = Object.fromEntries(new FormData(this).entries());
-      data.timestamp = firebase.firestore.FieldValue.serverTimestamp();
-
-      db.collection("orders").add(data)
-        .then(() => {
-          emailjs.send(service, adminTemplate, data);
-          emailjs.send(service, customerTemplate, data);
-          alert("✅ অর্ডার সফলভাবে সাবমিট হয়েছে!");
-          this.reset();
-        })
-        .catch(err => alert("❌ অর্ডার ব্যর্থ হয়েছে: " + err));
-    });
-  </script></body>
+</body>
 </html>
