--- a/Index.html
+++ b/Index.html
@@ -84,7 +84,7 @@
 
   <!-- Full Banner Image -->
   <div class="banner">
-    <img src="https://i.ibb.co/rG6z1sd/1s-photo.jpg" alt="Anime Banner">
+    <img src="https://ibb.co/rG6z1sdw" alt="Anime Banner">
   </div>
 
   <div class="container">
