--- a/Index.html
+++ b/Index.html
@@ -15,37 +15,37 @@
     }
     header {
       background-color: #0a0f1c;
-      padding: 20px;
+      padding: 30px;
       text-align: center;
       box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     }
     header h1 {
       color: #ff9f1c;
       margin: 0;
-      font-size: 26px;
+      font-size: 34px;
     }
     .banner img {
       width: 100%;
-      max-height: 400px;
+      max-height: 520px;
       object-fit: cover;
       display: block;
     }
     .container {
-      max-width: 900px;
-      margin: 30px auto;
-      padding: 20px;
+      max-width: 1200px;
+      margin: 40px auto;
+      padding: 40px 30px;
       background-color: #1c2a3a;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      border-radius: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.4);
       text-align: center;
     }
     .circle-image {
-      width: 140px;
-      height: 140px;
+      width: 160px;
+      height: 160px;
       border-radius: 50%;
       overflow: hidden;
-      margin: 0 auto 20px;
-      border: 3px solid #ff9f1c;
+      margin: 0 auto 30px;
+      border: 4px solid #ff9f1c;
     }
     .circle-image img {
       width: 100%;
@@ -53,21 +53,27 @@
       object-fit: cover;
     }
     .mega-title {
-      font-size: 28px;
+      font-size: 36px;
       color: #ffcc00;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       font-weight: bold;
     }
     .stars {
-      font-size: 30px;
+      font-size: 40px;
       color: gold;
     }
-    @media(max-width: 600px) {
+    @media(max-width: 768px) {
+      header h1 {
+        font-size: 26px;
+      }
+      .container {
+        padding: 20px;
+      }
       .mega-title {
-        font-size: 22px;
+        font-size: 24px;
       }
       .stars {
-        font-size: 24px;
+        font-size: 28px;
       }
       .circle-image {
         width: 100px;
@@ -84,13 +90,13 @@
 
   <!-- Full Banner Image -->
   <div class="banner">
-    <img src="https://ibb.co/rG6z1sdw" alt="Anime Banner">
+    <img src="https://i.ibb.co/HYJvSvK/mega-banner.jpg" alt="Banner">
   </div>
 
   <div class="container">
     <!-- Small Round Image -->
     <div class="circle-image">
-      <img src="https://i.ibb.co/kVgtpbj/2s-photo.jpg" alt="Profile">
+      <img src="https://i.ibb.co/Xybd6b5/small-round.jpg" alt="Round">
     </div>
 
     <!-- Mega Package Title -->
